--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
 }
@@ -37,6 +42,65 @@
   }
 }
 
-a{
-  margin: 1rem;
+img{
+  display: block;
+}
+
+.logo-home{
+  border-radius: 50%;
+  overflow: hidden;
+  width: 100px;
+  height: 100px;
+}
+
+.logo-home img{
+  width: 100%;
+  height: 100%;
+}
+
+.logo-pokedex{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.logo-game{
+  width: 50px;
+  height: 50px;
+  border-radius: 30%;
+  overflow: hidden;
+}
+
+.logo-game img{
+  width: 100%;
+  height: 100%;
+}
+
+.logo-pokedex img{
+  width: 100%;
+}
+
+
+.logo-off{
+  width: 35px;
+  height: 35px;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.logo-off img{
+  width: 100%;
+  height: 100%;
+}
+
+.logo-random{
+  width: 60px;
+  height: 60px;
+  overflow: hidden;
+}
+
+.logo-random img{
+  width: 100%;
+  height: 100%;
 }
