--- a/src/App.css
+++ b/src/App.css
@@ -104,3 +104,78 @@ img{
   width: 100%;
   height: 100%;
 }
+
+.no-logged-nav{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem;
+  position: absolute;
+  z-index: 10;
+  margin-left: 1rem;
+}
+
+.button-container{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin: 0 2rem 0 10rem;
+}
+
+/* Forms */
+.main-form {
+  position: relative;
+  padding-top: 10rem;
+  min-height: 70vh;
+  display: flex;
+  justify-content: center;
+}
+
+.register-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.input-container{
+  position: relative;
+}
+
+.label{
+  position: absolute;
+  left: 5%;
+  top: -40%;
+  z-index: 10;
+  background-color: black;
+  color: white;
+  padding-inline: 0.2rem;
+  display: inline-block;
+}
+
+.input{
+  padding: 0.2rem 0.3rem;
+  background-color: black;
+  color: white;
+  border: 1px white solid;
+  border-radius: 5px;
+}
+
+.form-button {
+  padding: 0.35rem;
+  border-radius: 5px;
+  background-color: black;
+  color: white;
+  border: 1px white solid;
+}
+
+.register-title{
+  color: white;
+}
+
+.dark{
+  background-color: black;
+}
+
+.body{
+  height: 100vh;
+}
