--- a/src/App.css
+++ b/src/App.css
@@ -116,9 +116,23 @@ img{
   align-items: center;
   padding: 1rem;
   gap: 1.5rem;
-  position: absolute;
-  z-index: 10;
-  left: 20%;
+  z-index: -10;
+}
+
+.navbar{
+  display: flex;
+  justify-content: center;
+  gap: 0.75rem;
+  background-color: black;
+}
+
+.navbar a{
+  color: whitesmoke;
+  text-decoration: none;
+}
+
+.navbar a:hover{
+  color: rgb(101, 100, 100);
 }
 
 .no-logged-nav-non{
