--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,15 @@ img{
   height: 100%;
 }
 
+.giant{
+  height: 100vh;
+}
+
+.small{
+  height: 100vh;
+  aspect-ratio: 16 / 9;
+}
+
 .no-logged-nav{
   display: flex;
   align-items: center;
@@ -124,11 +133,17 @@ img{
   justify-content: center;
   gap: 0.75rem;
   background-color: black;
+  z-index: 10;
 }
 
 .navbar a{
   color: whitesmoke;
   text-decoration: none;
+}
+
+.carousel{
+  position: absolute;
+  top: 0;
 }
 
 .navbar a:hover{
