--- a/src/App.css
+++ b/src/App.css
@@ -111,8 +111,40 @@ img{
   height: 100%;
 }
 
+/* .filter-container{
+  
+  gap: 1rem;
+} */
+
+/* @media (min-width: 960px) {
+  .filter-container{
+    flex-direction: column;
+  }
+} */
+
+.filters::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.filters::-webkit-scrollbar
+{
+	width: 8px;
+	background-color: #F5F5F5;
+}
+
+.filters::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 4px rgba(0,0,0,.3);
+	background-color: rgb(65, 64, 64);
+}
+
 .giant{
-  height: 100%;
+  height: 100vh;
+  width: 100vw !important;
 }
 
 .small{
