--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
@@ -9,7 +9,7 @@
   text-align: center;
 }
 
-body{
+body {
   font-family: "Kanit";
 }
 
@@ -43,70 +43,71 @@ body{
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
 
-img{
+img {
   display: block;
 }
 
-.logo-home{
+.logo-home {
   border-radius: 50%;
   overflow: hidden;
   width: 100px;
   height: 100px;
 }
 
-.logo-home img{
+.logo-home img {
   width: 100%;
   height: 100%;
 }
 
-.logo-pokedex{
+.logo-pokedex {
   width: 50px;
   height: 50px;
   border-radius: 50%;
   overflow: hidden;
 }
 
-.logo-game{
+.logo-game {
   width: 50px;
   height: 50px;
   border-radius: 30%;
   overflow: hidden;
 }
 
-.logo-game img{
+.logo-game img {
   width: 100%;
   height: 100%;
 }
 
-.logo-pokedex img{
+.logo-pokedex img {
   width: 100%;
 }
 
 
-.logo-off{
+.logo-off {
   width: 35px;
   height: 35px;
   overflow: hidden;
   cursor: pointer;
 }
 
-.logo-off img{
+.logo-off img {
   width: 100%;
   height: 100%;
 }
 
-.logo-random{
+.logo-random {
   width: 60px;
   height: 60px;
   overflow: hidden;
 }
 
-.logo-random img{
+.logo-random img {
   width: 100%;
   height: 100%;
 }
@@ -122,37 +123,34 @@ img{
   }
 } */
 
-.filters::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: #F5F5F5;
+.filters::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #F5F5F5;
 }
 
-.filters::-webkit-scrollbar
-{
-	width: 8px;
-	background-color: #F5F5F5;
+.filters::-webkit-scrollbar {
+  width: 8px;
+  background-color: #F5F5F5;
 }
 
-.filters::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 4px rgba(0,0,0,.3);
-	background-color: rgb(65, 64, 64);
+.filters::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, .3);
+  background-color: rgb(65, 64, 64);
 }
 
-.giant{
+.giant {
   height: 100vh;
   width: 100vw !important;
 }
 
-.small{
+.small {
   height: 100vh;
   aspect-ratio: 16 / 9;
 }
 
-.no-logged-nav{
+.no-logged-nav {
   display: flex;
   align-items: center;
   padding: 1rem;
@@ -160,7 +158,7 @@ img{
   z-index: -10;
 }
 
-.navbar{
+.navbar {
   display: flex;
   justify-content: center;
   gap: 2rem;
@@ -168,27 +166,27 @@ img{
   z-index: 10;
 }
 
-.navbar a{
+.navbar a {
   color: whitesmoke;
   text-decoration: none;
 }
 
 @media screen and (max-width: 600px) {
-  .navbar{
+  .navbar {
     gap: 0.75rem;
   }
 }
 
-.carousel{
+.carousel {
   position: absolute;
   top: 0;
 }
 
-.navbar a:hover{
+.navbar a:hover {
   color: rgb(101, 100, 100);
 }
 
-.no-logged-nav-non{
+.no-logged-nav-non {
   display: flex;
   align-items: center;
   padding: 1rem;
@@ -198,7 +196,7 @@ img{
   left: 35%;
 }
 
-.button-container{
+.button-container {
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -220,11 +218,11 @@ img{
   gap: 1.5rem;
 }
 
-.input-container{
+.input-container {
   position: relative;
 }
 
-.label{
+.label {
   position: absolute;
   left: 5%;
   top: -40%;
@@ -235,7 +233,7 @@ img{
   display: inline-block;
 }
 
-.input{
+.input {
   padding: 0.2rem 0.3rem;
   background-color: black;
   color: white;
@@ -243,7 +241,7 @@ img{
   border-radius: 5px;
 }
 
-.input:focus{
+.input:focus {
   background-color: black;
   color: white;
 }
@@ -256,24 +254,24 @@ img{
   border: 1px white solid;
 }
 
-.register-title{
+.register-title {
   color: white;
 }
 
-.dark{
+.dark {
   background-color: black;
 }
 
-.body{
+.body {
   min-height: 100vh;
 }
 
 /*Pokedex*/
-.p-6{
+.p-6 {
   padding-top: 6rem;
 }
 
-.pokedex-card{
+.pokedex-card {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -281,23 +279,23 @@ img{
   padding: 0.6rem;
   margin: 1rem;
   border: none;
-  width: 20rem;
-  height: 10rem;
+  width: 250px;
+  height: 300px;
   border-radius: 5px;
   background-color: rgb(230, 228, 228);
   color: black;
 }
 
-.post-picture{
+.post-picture {
   position: absolute;
   top: -6.6%;
 }
 
-.picture-input{
+.picture-input {
   padding: 0.6rem;
 }
 
-.pokedex-section{
+.pokedex-section {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -305,19 +303,19 @@ img{
 }
 
 /**/
-.pokemonType{
+.pokemonType {
   border-radius: 20px;
   padding: 0.5rem 1rem;
   color: whitesmoke;
 }
 
-.button-filter{
+.button-filter {
   padding: 0.4rem 0.6rem;
   margin: 0 0.5rem 0 0.5rem;
   border-radius: 10px;
 }
 
-.detail-card{
+.detail-card {
   display: flex;
   flex-direction: column;
   background-color: rgb(40, 39, 39);
@@ -328,58 +326,58 @@ img{
   backdrop-filter: blur(20px);
 }
 
-.stats_section{
+.stats_section {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr;
 }
 
-.stats-description{
+.stats-description {
   text-align: left;
   margin-left: 2rem;
 }
 
-.post{
+.post {
   padding-top: 1rem;
 }
 
-.post-label{
+.post-label {
   left: 5%;
   top: -40%;
 }
 
-.textarea{
+.textarea {
   top: -5%;
 }
 
-.profile-layout{
+.profile-layout {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   padding-top: 1rem;
 }
 
-.sprites_section{
+.sprites_section {
   display: flex;
   justify-content: space-evenly;
 }
 
-.main_photo{
+.main_photo {
   transform: scale(1.5);
 }
 
-.capture_button{
+.capture_button {
   width: 200px;
   margin: auto;
 }
 
-.pokeball_random{
+.pokeball_random {
   margin: 1rem auto;
   animation: load infinite linear 5s;
 }
 
 @keyframes load {
-  100%{
+  100% {
     transform: rotate(360deg);
   }
 }
